--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -32,7 +32,7 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form th:object="${project}">
+                                    <form th:object="${project}" th:action="@{/project/create}" method="post">
                                         <div class="row">
                                             <div class="col">
                                                 <div class="form-group">
@@ -141,7 +141,7 @@
                                                 <td th:text="${project.projectName}"></td>
                                                 <td th:text="${project.projectStartDate+ ' ' +project.projectEndDate}"></td>
                                                 <td th:text="${project.assignedManager.firstName+' '+project.assignedManager.lastName}"></td>
-                                                <td th:text="${project.projectStatus}"></td>
+                                                <td th:text="${project.projectStatus.value}"></td>
                                                                                               <td>
                                                     <a href="#">
                                                         <button type="button" class="btn btn-warning rounded-0">Update
