--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -142,12 +142,12 @@
                                                 <td th:text="${project.projectStartDate+ ' ' +project.projectEndDate}"></td>
                                                 <td th:text="${project.assignedManager.firstName+' '+project.assignedManager.lastName}"></td>
                                                 <td th:text="${project.projectStatus.value}"></td>
-                                                                                              <td>
+                                                <td>
                                                     <a href="#">
                                                         <button type="button" class="btn btn-warning rounded-0">Update
                                                         </button>
                                                     </a>
-                                                    <a href="#">
+                                                    <a th:href="@{/project/delete/{id}(id=${project.projectCode})}">
                                                         <button type="button" class="btn btn-danger rounded-0">Delete
                                                         </button>
                                                     </a>
