--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -139,7 +139,7 @@
                                             <tr th:each="project :${projects}">
                                                 <td th:text="${project.projectCode}"></td>
                                                 <td th:text="${project.projectName}"></td>
-                                                <td th:text="${project.projectStartDate+ ' ' +project.projectEndDate}"></td>
+                                                <td th:text="${#temporals.format(project.projectStartDate, 'MM.dd.yyyy')+ ' - ' +#temporals.format(project.projectEndDate, 'MM.dd.yyyy')}"></td>
                                                 <td th:text="${project.assignedManager.firstName+' '+project.assignedManager.lastName}"></td>
                                                 <td th:text="${project.projectStatus.value}"></td>
                                                 <td>
