--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -143,7 +143,7 @@
                                                 <td th:text="${project.assignedManager.firstName+' '+project.assignedManager.lastName}"></td>
                                                 <td th:text="${project.projectStatus.value}"></td>
                                                 <td>
-                                                    <a href="#">
+                                                    <a th:href="@{/project/update/{id}(id=${project.projectCode})}">
                                                         <button type="button" class="btn btn-warning rounded-0">Update
                                                         </button>
                                                     </a>
@@ -151,7 +151,7 @@
                                                         <button type="button" class="btn btn-danger rounded-0">Delete
                                                         </button>
                                                     </a>
-                                                    <a href="#">
+                                                    <a th:href="@{/project/complete/{id}(id=${project.projectCode})}" >
                                                         <button type="button" class="btn btn-info rounded-0">Complete
                                                         </button>
                                                     </a>
